# bradenkirkham.github.io

./: README.md  index.html  siteScript.js  stylepage.css
App/: settings.gradle
DNSResolver/src/: DNSCache.java  DNSHeader.java  DNSMessage.java  DNSQuestion.java  DNSRecord.java  DNSServer.java
JobPostAnalyzer/ApplyUI/: __init__.py  main.py  scraper.py  utils.py
JobPostAnalyzer/ApplyUI/templates/: main.html
JobPostAnalyzer/Glass_Spyder/: Glass_Spyder.py  Text_Cleaner.py
MSDScript/: CMakeLists.txt  Cont.cpp  Cont.h  Env.cpp  Env.h  Expr.cpp  Expr.hpp  MSDScriptDocumentation.md  Makefile  Step.cpp  Step.h  catch.hpp  cmdline.cpp  cmdline.hpp  main.cpp  parse.cpp  parse.h  val.cpp  val.h
MSDScript/MSDTest/: CMakeLists.txt  testGeneratorFunctions.cpp  testGeneratorFunctions.h  test_msdscript.cpp
PacmanMazeSolver/: Graph.java  Node.java  PathFinder.java  TestPathFinder.java  assignment7.properties
SharksAndMinnows/sharksandminnows.xcodeproj/: project.pbxproj
ThreadedWebServer/resource/: chatAPP.js  index.html  test.html
ThreadedWebServer/src/: HttpRequest.java  HttpResponse.java  Room.java  Server.java  myRunnable.java  wsStuff.java
lifeStyleApp/: build.gradle  local.properties
lifeStyleApp/amplify/: team-provider-info.json
lifeStyleApp/amplify/#current-cloud-backend/: backend-config.json
lifeStyleApp/amplify/.config/: local-aws-info.json  (+2 more)
lifeStyleApp/app/: build.gradle
sharksAndMinnows/: Makefile  README.md  Textures.cpp  Textures.hpp  gameFunctions.cpp  gameFunctions.hpp  main.cpp  sharkClass.cpp  sharkClass.hpp  userClass.cpp  userClass.hpp
(+77 files in other folders)
